--- a/src/main/resources/static/ejemplo2.html
+++ b/src/main/resources/static/ejemplo2.html
@@ -8,10 +8,7 @@
         <div> 
             <a href="index.html"> <h2 style="text-align: center; background-color: #304fff; color: #ffffff;" href="index.html">Ejemplo 2</h2> </a>      
         </div>
+        <img src="img/images.jpg" alt="" srcset="">
+        <img src="https://acroadtrip.blob.core.windows.net/catalogo-imagenes/m/RT_V_f4da852ca79c44189237853097fcf640.jpg" width="250" alt="200" srcset="">
     </body>
-    <style>
-            *{
-                margin: 0;
-            }
-        </style>
 </html>
