--- a/src/main/resources/static/ejemplo3.html
+++ b/src/main/resources/static/ejemplo3.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div> 
-            <a href="index.html"> <h2 style="text-align: center; background-color: #30ff63; color: #ffffff;" href="index.html">Ejemplo 2</h2> </a>  
+            <a href="index_test.html"> <h2 style="text-align: center; background-color: #30ff63; color: #ffffff;" href="index.html">Ejemplo 2</h2> </a>  
             <ul>
                 <li>a</li>
                 <li>b</li>
