--- a/src/main/resources/static/ejemplo2.html
+++ b/src/main/resources/static/ejemplo2.html
@@ -6,7 +6,7 @@
     </head>    
     <body style="font-family: Arial;">
         <div> 
-            <a href="index.html"> <h2 style="text-align: center; background-color: #304fff; color: #ffffff;" href="index.html">Ejemplo 2</h2> </a>      
+            <a href="index_test.html"> <h2 style="text-align: center; background-color: #304fff; color: #ffffff;" href="index.html">Ejemplo 2</h2> </a>      
         </div>
         <img src="img/images.jpg" alt="" srcset="">
         <img src="https://acroadtrip.blob.core.windows.net/catalogo-imagenes/m/RT_V_f4da852ca79c44189237853097fcf640.jpg" width="250" alt="200" srcset="">
